adding a bunch of paper files -- not sure why these weren't staged?

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -3,44 +3,58 @@
 
 \subsection{Gyrochronology}
 It is well established that the rotation periods of FGKM dwarfs increase over
-time \citep{skumanich1972}.
-This characteristic of main-sequence (MS) stars allows them to be dated using
-their rotation periods, via gyrochronology \citep[\eg][]{kawaler1989,
-pinsonneault1989, barnes2003, barnes2007, barnes2010, meibom2011, meibom2015},
-which is particularly useful since the ages of MS stars are difficult to
-measure via isochrone placement.
+time \citep{skumanich1972}, however the exact nature and form of rotational
+evolution is still being actively studied.
+Once rotational evolution is well understood, rotation periods can be used to
+precisely and accurately date stars via gyrochronology
+\citep[\eg][]{kawaler1989, pinsonneault1989, barnes2003, barnes2007,
+barnes2010, meibom2011, meibom2015}.
 It is also well established that stars of the same age but different masses
-have different rotation periods \citep[\eg][]{kraft1967, matt2012}, thought to
-be caused by the deeper convective zones, and therefore stronger magnetic
-dynamos (and more efficient magnetic braking) in lower-mass stars.
-However, an underlying assumption behind many empirical gyrochronology
-relations is that the relationships between rotation period and photometric
-color\footnote{As the directly observable quantity, color is often used as a
-mass proxy, and empirical gyrochronology relations are usually calibrated in
-color, rather than mass or effective temperature.},
-and rotation period and age are {\it separable}, meaning that the
-period-color relation is the same at all ages and the period-age relation is
-the same at all colors \citep[\eg][]{barnes2003, barnes2007, mamajek2008,
-meibom2011, angus2015, angus2019}.
-Not all gyrochronology models follow this form, particularly those motivated
-based on stellar structure and evolution theory or with a Rossby number,
-rather than rotation period dependence \citep[\eg][]{barnes2010, matt2012,
-vansaders2016]}.
-It was recently shown that old field stars rotate more rapidly than a simple,
-separable gyrochronology relation would predict \citep{angus2015,
-vansaders2016, vansaders2018, metcalfe2019}, and that a mass-dependent
-modification to the classical \prot\ $\propto t^{\frac{1}{2}}$ spin-down law
-\citep{skumanich1972} is required to reproduce the data \citep{vansaders2016,
-vansaders2018}.
-An even more recent analysis of the 1.1 Gyr open cluster, NGC 6811, provides
-further indication that the exponent of the period-age relation is
-mass and time-dependent \citep{curtis2019}.
-This cluster has a flattened relationship between rotation period and color
-and the G dwarfs rotate at the same rate as the K dwarfs.
+have different rotation periods \citep[\eg][]{kraft1967, matt2012}, which is
+thought to be caused by the variation in convection zone depth.
+For example, lower mass stars with deeper convections zones are expected to
+have stronger magnetic dynamos and lose angular momentum more rapidly.
+However, as new rotation period measurements have become available, a more
+complicated picture of stellar rotational evolution is emerging.
+% However, an underlying assumption behind many empirical gyrochronology
+% relations is that the relationships between rotation period and photometric
+% color\footnote{As the directly observable quantity, color is often used as a
+% mass proxy, and empirical gyrochronology relations are usually calibrated in
+% color, rather than mass or effective temperature.},
+% and rotation period and age are {\it separable}, meaning that the
+% period-color relation is the same at all ages and the period-age relation is
+% the same at all colors \citep[\eg][]{barnes2003, barnes2007, mamajek2008,
+% meibom2011, angus2015, angus2019}.
+% Not all gyrochronology models follow this form, particularly those based on
+% stellar structure and evolution theory or with a Rossby number, rather than
+% rotation period dependence \citep[\eg][]{barnes2010, matt2012,
+% vansaders2016]}.
+For example, it was recently shown that old field stars rotate more rapidly
+than models predicted \citep{angus2015, vansaders2016, vansaders2018,
+metcalfe2019}, and a mass-dependent modification to the classical \prot\
+$\propto t^{\frac{1}{2}}$ spin-down law \citep{skumanich1972} was required to
+reproduce the data \citep{vansaders2016, vansaders2018}.
+Even more recent analyses of the 1.1 Gyr open cluster, NGC 6811, provides
+further indication that the exponent of the period-age relation is mass and
+time-dependent \citep{curtis2019 spada2019}.
+This cluster has a flattened relationship between rotation period and
+color: the G dwarfs rotate at the same rate as the K dwarfs.
+New theoretical models that vary the rate of magnetic braking and the
+redistribution of angular momentum in the interior of stars are able to
+successfully reproduce the flattened period-color relation seen in old open
+clusters \citep{spada2019}.
+With the advent of large time-series photometry surveys, providing large
+numbers of precise rotation period measurements over the last few years, we
+now know that the rotational evolution of stars is a complicated process.
+However, relying on open clusters (which are typically young) and
+asteroseismic stars (which are typically G-type stars or more massive) to
+calibrate gyrochronology limits the mass and age coverage of the calibration
+sample.
 
 In this paper, we tested the \citet{angus2019} gyrochronology relation, a
-separable relation, calibrated using the period-color relation of Praesepe (in
-\gaia\ \gcolor\ color) and the period-age relation of Praesepe and the Sun.
+separable relation in color and age, calibrated using the period-color
+relation of Praesepe (in \gaia\ \gcolor\ color) and the period-age relation of
+Praesepe and the Sun.
 The large number of Praesepe members with precise rotation periods from the
 \ktwo\ mission \citep{douglas2017, rebull2017}, spanning spectral types F
 through early M, makes it a good cluster for calibrating the period-color
@@ -56,10 +70,10 @@ The oldest M dwarfs with reliable ages and rotation periods are members of
 Praesepe ($\sim$ 650 Myrs), so even {\it less} is known about their rotational
 evolution.
 
-In this paper, gyrochronal ages of cool field dwarfs in the \kepler\ field
-were calculated with the \citep{angus2019} gyrochronology model, using
-de-reddened \Gaia\ \gcolor\ color and rotation periods reported by \mct\ (we
-explain our data selection process in section \ref{sec:the_data}).
+We calculated gyrochronal ages of cool field dwarfs in the \kepler\ field
+using the \citep{angus2019} gyrochronology model, with de-reddened \Gaia\
+\gcolor\ color and rotation periods reported by \mct\ (we explain our data
+selection process in section \ref{sec:the_data}).
 These gyrochronal ages are shown on a \gaia\ color-magnitude diagram (CMD) in
 figure \ref{fig:age_gradient}.
 The stars with old gyrochronal ages, plotted in yellow hues, predominantly lie
