--- a/paper/method.tex
+++ b/paper/method.tex
@@ -96,7 +96,7 @@ are also older on average.
 This mass-age degeneracy is highly reduced in M dwarfs because their
 main-sequence lifetimes are longer than the age of the Universe, however no
 evidence for mass-dependent heating has been found in M dwarfs
-\citep{faherty2009}.
+\citep{faherty2009, newton2016}.
 
 To investigate whether mass-dependent heating could be acting on the \kepler\
 sample, we selected late K and M dwarfs observed by both \kepler\ and \gaia,
@@ -111,6 +111,8 @@ greater than 1.2 (corresponding to an effective temperature $\lesssim$
 4800 K) and absolute \gaia\ $G$-band magnitudes $<$ 4.
 We also eliminated visual binaries by removing stars above a 6th order
 polynomial, fit to the MS on the \gaia\ CMD.
+This polynomial-based binary cut was slightly different to the polynomial cut
+used...
 We then applied the quality cuts described in section \ref{sec:the_data}.
 To search for evidence of mass-dependent heating we calculated the (\vb)
 velocity dispersion of stars in effective temperature bins.
