--- a/paper/results.tex
+++ b/paper/results.tex
@@ -72,7 +72,7 @@ as a function of effective temperature.
 Overall, figure \ref{fig:age_cut} shows that velocity dispersion increases
 with gyrochronal age across all temperatures, implying that both velocity
 dispersion and rotation periods increase with age as expected.
-The constant velocity dispersion of young stars as a function of temperature
+The flat velocity dispersion of young stars as a function of temperature
 shows that the Praesepe-calibrated gyrochronology relation accurately predicts
 the relative ages of {\it young} field stars.
 % To our knowledge, no gyrochronology relation has previously been demonstrated to
@@ -84,14 +84,17 @@ the relative ages of {\it young} field stars.
 % However, if the stars in each selected age group had the {\it same} age across
 % the temperature range, their velocity dispersion would be a constant function
 % of \teff.
-In contrast however, velocity dispersion increases as a function of
-temperature for old stars, meaning the \citet{angus2019} gyrochronology
-relation either under-predicts the ages of old, late-K dwarfs, or
-over-predicts the ages of old early-K and late-G dwarfs\footnote{Since \vb\
-velocity dispersion only provides relative and not absolute ages, it is
-difficult to tell whether the ages of cool stars are being under-predicted,
-the ages of hot stars being are over-predicted, or both.}.
-This indicates that the relationship between rotation period and photometric
+If the gyrochronology relations worked at all ages and temperatures, the
+bottom panel of figure \ref{fig:age_cut} would show a flat relationship
+between velocity dispersion and \teff at all ages.
+However, velocity dispersion {\it increases} as a function of temperature for
+old stars, meaning the \citet{angus2019} gyrochronology relation either
+under-predicts the ages of old, late-K dwarfs, or over-predicts the ages of
+old early-K and late-G dwarfs\footnote{Since \vb\ velocity dispersion only
+provides relative and not absolute ages, it is difficult to tell whether the
+ages of cool stars are being under-predicted, the ages of hot stars being are
+over-predicted, or both.}.
+This suggests that the relationship between rotation period and photometric
 color or \teff\ flattens out over time, and possibly even inverts.
 The lines of constant age (isochrones) sweeping diagonally upwards in the top
 panel of figure \ref{fig:age_cut} are too steeply sloped at old ages.
@@ -138,8 +141,10 @@ decreasing effective temperature at a given age.
 
 The shape of the period-\teff\ relations at old ages appears to follow the
 shape of the upper detection edge.
-The so-called `M dwarf dip' \citep{vansaders2018} is reflected in the lines of
-constant velocity dispersion (and presumed age) in the top panel of figure
+The `M dwarf dip' \citep{vansaders2018}, a feature of the \mct\ rotation
+period catalog characterized by a dearth of slowly rotating M dwarfs between
+$\sim$2750 and 4250 K, is reflected in the lines of constant velocity
+dispersion (and presumed age) in the top panel of figure
 \ref{fig:dispersion_period_teff}.
 If the shape of the upper edge of rotation period measurements is created by a
 detection limit, it could indicate the rotation periods at which stars of
