--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,26 +1,41 @@
 % Word limit: 250
 
-The rotational evolution of cool dwarfs is mostly unconstrained after around
-2-3 billion years, and the gyrochronology relations are poorly calibrated
-beyond this time due to a lack of precise ages and rotation periods for old
+The rotational evolution of cool dwarfs is poorly constrained after $\sim$2-3
+billion years due to a lack of precise ages and rotation periods for old
 main-sequence stars.
 % However, recent evidence suggests that the relationship between rotation
 % period and color/temperature/mass does not remain constant over large
 % timescales, contradicting a long-held assumption that underlies many
 % gyrochronology relations.
-We use the velocities of populations of cool dwarfs to reveal the rotational
-evolution of these stars at old ages.
-We find that groups of stars, selected to be the same age using a
-gyrochronology relation calibrated to the Praesepe cluster, do {\it not} have
-the same velocity dispersion at all temperatures; cooler stars have greater
-velocity dispersions than hotter stars.
-We interpret this to mean that these cooler stars are older than the hotter
-ones, which implies that the period-color relation of Praesepe is not
-appropriate for old stars.
-Futhermore, our results indicate that the slope of the period-color relation
-actually {\it inverts}: at young ages early K stars rotate more rapidly than
-late K stars, but beyond $\sim$ 2 Gyr they rotate more slowly.
-These observations could be reproduced by mass-dependent dynamical heating,
-where lower-mass stars experience a greater rate of dynamical heating than
-higher-mass stars, however we find no evidence for mass-dependent heating
-within K and M dwarfs in the \kepler\ field.
+In this work, we use the velocities of low-mass \kepler\ dwarfs to reveal
+their rotational evolution and demonstrate that kinematics have potential to
+be a useful tool for calibrating gyrochronology.
+At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
+to the Praesepe cluster, accurately predicts the relative ages of stars.
+At these young ages, lower-mass stars lose angular momentum more quickly than
+higher mass stars and therefore rotate more slowly at the same age.
+However, at old ages, late G and early K dwarfs rotate {\it faster} than late
+K dwarfs of the same age.
+This implies that low-mass stars lose angular momentum more slowly than
+higher-mass stars after a certain age or Rossby number.
+Our results, based on field star rotation periods, align with recent findings
+from the rotation periods of stars in middle-aged open clusters and
+theoretical models that vary the rate of surface-to-core angular momentum
+transport.
+Finally, we find no evidence for mass-dependent heating in a sample of K and M
+dwarfs in the \kepler\ field.
+
+% We find that groups of stars, selected to be the same age using a
+% gyrochronology relation calibrated to the Praesepe cluster, do {\it not} have
+% the same velocity dispersion at all temperatures; cooler stars have greater
+% velocity dispersions than hotter stars.
+% We interpret this to mean that these cooler stars are older than the hotter
+% ones, which implies that the period-color relation of Praesepe is not
+% appropriate for old stars.
+% Futhermore, our results indicate that the slope of the period-color relation
+% actually {\it inverts}: at young ages early K stars rotate more rapidly than
+% late K stars, but beyond $\sim$ 2 Gyr they rotate more slowly.
+% These observations could be reproduced by mass-dependent dynamical heating,
+% where lower-mass stars experience a greater rate of dynamical heating than
+% higher-mass stars, however we find no evidence for mass-dependent heating
+% within K and M dwarfs in the \kepler\ field.
