modifying paper text and experimenting with various cuts (the overall results are the same)

--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -4,14 +4,15 @@
 \subsection{The period gap}
 \label{sec:period_gap}
 
-The origin of the rotation period gap, first identified
-by \citet{mcquillan2013} and visible in figures \ref{fig:age_cut} and
+The origin of the rotation period gap, first identified by
+\citet{mcquillan2013} and visible in figures \ref{fig:age_cut} and
 \ref{fig:dispersion_period_teff} still remains a mystery.
 This gap can be seen as an under-density of points between the 0.7-1.0 and
 1.0-1.5 Gyr age ranges in figure \ref{fig:age_cut} and roughly follows a line
 of constant gyrochronal age of around 1.1 Gyr \citep[according to the
 gyrochronology relation of][]{angus2019}, as shown in figure
 \ref{fig:dispersion_period_teff}.
+
 Several explanations for the gap's origin have been proposed, including a
 discontinuous star formation history \citep{mcquillan2013, davenport2017,
 davenport2018}, a rapid change in magnetic field structure
