simplifying language and better explanations

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,29 +1,44 @@
 % Word limit: 500
 \section{Introduction}
 
-\subsection{Gyrochronology} It is well established that the rotation periods
-of FGKM dwarfs increase over time \citep[\eg][]{schatzmann, weber,
-skumanich1972 kawaler1989, pinsonneault1989, barnes2003, barnes2007,
-barnes2010, meibom2011, meibom2015}, however the exact nature and form of
-rotational evolution is still being actively studied.
+\subsection{Gyrochronology}
+
+It is well established that magnetized stellar winds cause the rotation
+periods of FGKM dwarfs to increase over time \citep[\eg][]{schatzman1962,
+weber1967, skumanich1972, kawaler1988, pinsonneault1989}, and, once fully
+calibrated, the relationship between period, mass and age can be used to
+age-date stars via gyrochronology \citep{barnes2003, barnes2007, barnes2010,
+meibom2011, meibom2015}.
+% However, the exact nature of rotational evolution is still being actively
+% studied.
 % Once the relationship between rotation period, mass and age is well
 % calibrated, rotation periods can be used to precisely and accurately date
 % stars via gyrochronology \citep[\eg][]{kawaler1989, pinsonneault1989,
 % barnes2003, barnes2007, barnes2010, meibom2011, meibom2015}.
 % It is also well established that stars of the same age but different masses
-In particular, as new rotation period measurements for stars with precise ages
-become available, the mass-dependence of the relationship between rotation and
-age appears to be more complicated than once thought.
-From both observations and theoretical modelling, stars of different masses
-are expected to have different rotation periods \citep[\eg][]{kraft1967,
-matt2012}, which is thought to be mainly driven by variation in convection
-zone depth.
-For example in the Praesepe cluster, M dwarfs spin more slowly than G dwarfs,
-presumably because lower mass stars with deeper convections zones are have
-stronger magnetic dynamos and lose angular momentum more rapidly.
-However, new rotation period measurements show that variation in convection
-zone depth cannot be solely responsible for mass-dependent rotational
-evolution.
+However, new photometric rotation periods measured from \kepler\ light curves
+reveal that rotational evolution is more complicated than previously thought.
+For example, the M dwarfs in the $\sim$ 700 Myr Praesepe cluster spin more
+slowly than the G dwarfs -- in theory because lower-mass stars have deeper
+convections zones which generate stronger magnetic fields and more efficient
+magnetic braking \citep{schatzman1962, weber1967}.
+However, in the 1.1 Gyr NGC 6811 cluster, late-K dwarfs rotate at the {\it
+same} rate as early-K dwarfs \citep{curtis2019}.
+In other words, convection zone depth cannot be the only variable that affects
+stellar spin-down rate.
+New semi-empirical models that vary the rate of angular momentum
+redistribution in the interiors of stars are able to reproduce this flattened
+period-color relation \citep{spada2019}.
+These models suggest that mass and age-dependent coupling between the cores
+and envelopes of stars has a significant impact on their surface rotation
+rates.
+
+Another example of unexpected rotational evolution is seen in old field stars
+which appear to rotate more rapidly than classical gyrochronology models
+predict \citep{angus2015, vansaders2016, vansaders2018, metcalfe2019}.
+A mass-dependent modification to the classical \prot\ $\propto
+t^{\frac{1}{2}}$ spin-down law \citep{skumanich1972} is required to reproduce
+the observations \citep{vansaders2016, vansaders2018}.
 % revealing that rotational
 % evolution is clearly a more complicated process than once thought.
 % However, an underlying assumption behind many empirical gyrochronology
@@ -39,33 +54,33 @@ evolution.
 % stellar structure and evolution theory or with a Rossby number, rather than
 % rotation period dependence \citep[\eg][]{barnes2010, matt2012,
 % vansaders2016]}.
-For example, old field stars seem rotate more rapidly than models predicted
-\citep{angus2015, vansaders2016, vansaders2018, metcalfe2019}, and a
-mass-dependent modification to the classical \prot\ $\propto t^{\frac{1}{2}}$
-spin-down law \citep{skumanich1972} is required to reproduce the data
-\citep{vansaders2016, vansaders2018}.
-Recent analyses of the 1.1 Gyr open cluster, NGC 6811, provide further
-indication that the exponent of the period-age relation is mass and
-time-dependent \citep{curtis2019 spada2019}.
-This cluster has a flattened relationship between rotation period and
-color: the G dwarfs rotate at the same rate as the K dwarfs.
-New semi-empirical models that vary the redistribution of angular momentum in
-the interiors of stars are able to reproduce this flattened period-color
-relation \citep{spada2019}.
+% For example, old field stars seem rotate more rapidly than models predicted
+% \citep{angus2015, vansaders2016, vansaders2018, metcalfe2019}, and a
+% mass-dependent modification to the classical \prot\ $\propto t^{\frac{1}{2}}$
+% spin-down law \citep{skumanich1972} is required to reproduce the data
+% \citep{vansaders2016, vansaders2018}.
+% In addition, recent analyses of the 1.1 Gyr open cluster, NGC 6811, provide
+% further indication that rotational evolution is mass and time-dependent
+% \citep{curtis2019 spada2019}.
+% This cluster has a flattened relationship between rotation period and
+% color: the early-K dwarfs rotate at the same rate as the late-K dwarfs.
 % With the advent of large time-series photometry surveys, providing large
 % numbers of precise rotation period measurements over the last few years.
-We now know that the rotational evolution of stars is a complicated process,
-however relying on open clusters (which are typically young) and asteroseismic
-stars (which are typically G-type stars or more massive) to calibrate
-gyrochronology relations limits the mass and age coverage of the calibration
-sample.
-In this paper, we use stellar velocity dispersions to gain insight into the
-rotational evolution of field stars.
-This technique provides relative ages for groups of stars that cover a broad
-range of masses and ages, allowing us to observe the rotational evolution of
-stars in an average sense.
 
-\subsection{Kinematics as an age proxy}
+The rotational evolution of stars is clearly a complicated process, and to
+fully calibrate the gyrochronology relations we need reliable ages for large
+numbers of field stars which span a range of ages.
+% however relying on open clusters (which are typically young) and asteroseismic
+% stars (which are typically G-type stars or more massive) to calibrate
+% gyrochronology relations limits the mass and age coverage of the calibration
+% sample.
+In this paper, we use the velocity dispersions of field stars to gain insight
+into their rotational evolution.
+% This technique provides relative ages for groups of stars that cover a broad
+% range of masses and ages, allowing us to observe the rotational evolution of
+% stars in an average sense.
+
+\subsection{Using kinematics as an age proxy}
 
 Stars are thought to be born in the thin disk of the Milky Way (MW), orbiting
 the galaxy with a low out-of-plane, or vertical, velocity ($W$, or \vz),
@@ -81,10 +96,10 @@ MW]{sellwood2014}.
 Although the velocity of any individual star will only provide a weak age
 constraint, the velocity dispersion of a group of stars can indicate whether,
 on average, that group is old or young relative to other groups.
-In this work we compare the velocity dispersions of groups of stars to
-ascertain which groups are older and which younger and draw conclusions based
-on the implied relative ages of populations.
-% The age-velocity dispersion relations (AVRs) are still actively being
+In this work we compare the velocity dispersions of groups of field stars in
+the Galactic thin disk to ascertain which groups are older and which younger
+and draw conclusions based on the implied relative ages.
+% The age-velocity dispersion reations (AVRs) are still actively being
 
 % Vertical action is thought to be a better age indicator than vertical
 % velocity \citep{ting2019}, although still only a weak age indicator for
@@ -95,30 +110,30 @@ position and velocity information, and unfortunately most stars with measured
 rotation periods do not have radial velocity (RV) measurements because they
 are relatively faint \kepler\ targets ($\sim$11th-18th magnitudes).
 For this reason, we used velocity in the direction of galactic latitude, \vb,
-to mimic \vz.
+to approximate \vz.
 The \kepler\ field is positioned at low galactic latitude
 (b=$\sim$5-20\degrees), so \vb\ is a close (although imperfect -- see section
 \ref{sec:results}) approximation to \vz.
-Because we use \vb\ rather than \vz\, it is difficult to directly compare
-gyrochronal ages with kinematic ones using an age-velocity dispersion relation
-(AVR).
+Because we use \vb\ rather than \vz\, we cannot calculate absolute kinematic
+ages using an age-velocity dispersion relation (AVR).
 However, regardless of direction, velocity dispersion is expected to
-monotonically increase over time, and can therefore be used effectively to
-{\it rank} groups of stars by age.
+monotonically increase over time, and can therefore be used to {\it rank}
+groups of stars by age.
 
 This paper is laid out as follows: in section \ref{sec:method} we describe our
 sample selection process and the methods used to calculated stellar
 velocities.
 We also establish that \vb\ velocity dispersion, \sigmavb, can be used as an
 age proxy by demonstrating that neither mass-dependent heating nor the
-selection function is likely to have a strong affect on our sample.
-In section \ref{sec:results} we use stellar kinematics to investigate the
-relationship between rotation period, age and color/\teff\ in the field.
-We show that the period-color relation of Praesepe is not applicable to
-old stars in section \ref{sec:age_cut}, and reveal the true shape of the
-period-color relations in section \ref{sec:the_reveal}.
-We discuss a possible connection with the rotation period gap in section
-\ref{sec:period_gap}.
+selection function seems to strongly affect on our sample.
+In section \ref{sec:results} we use kinematics to investigate the
+relationship between rotation period, age and color/\teff\ in the field and
+interpret our results in section \ref{sec:discussion}.
+% We show that the period-color relation of Praesepe is not applicable to
+% old stars in section \ref{sec:age_cut}, and reveal the true shape of the
+% period-color relations in section \ref{sec:the_reveal}.
+% We discuss a possible connection with the rotation period gap in section
+% \ref{sec:period_gap}.
 
 % We also tested the \citet{angus2019} gyrochronology relation, a separable
 % relation in color and age, calibrated using the period-color relation of
